# ros-arrowhead-f-adapter

./: .gitignore  README.md  deploy_system.sh
arrowhead-cpp/: CMakeLists.txt  README.md
arrowhead-cpp/include/: ApplicationServiceInterface.h  ApplicationServiceInterface.hpp  ArrowheadDataExt.h  Consumer.h  HttpHandler.h  Http_Handler.hpp  HttpsHandler.h  Https_Handler.hpp  OrchestratorInterface.h  OrchestratorInterface.hpp  Provider.h  Publisher.h  RSASecurity.h  Split.h  Subscriber.h  arrowhead_cpp.h  arrowhead_data_ext.hpp  base64.h  consumer.h  provider.h  publisher.h  split.h  subscriber.h
arrowhead-cpp/src/: Consumer.cpp  Provider.cpp  Publisher.cpp  Subscriber.cpp  arrowhead_cpp.cpp  consumer.cpp  provider.cpp  publisher.cpp  subscriber.cpp
arrowhead-cpp/src/Interface/: ApplicationServiceInterface.cpp  HttpHandler.cpp  Http_Handler.cpp  HttpsHandler.cpp  Https_Handler.cpp  OrchestratorInterface.cpp
arrowhead-cpp/src/Security/: RSASecurity.cpp  base64.cpp
comon/: messages.cpp  messages.hpp
consumer_publisher/: CMakeLists.txt  package.xml
consumer_publisher/launch/: consumer_publisher.launch
consumer_publisher/src/: consumer_publisher.cpp
provider/: CMakeLists.txt  package.xml
provider/launch/: provider.launch  real.launch  system.launch
provider/src/: provider.cpp
provider_client/: CMakeLists.txt  OrchestratorInterface.ini  README.md  consumedServices.json  documentation.md  package.xml
provider_client/ProviderExample/: ApplicationServiceInterface.ini  ProviderExample
provider_client/ProviderExample/src/Provider/: ProvidedService.h  ProviderExample.cpp  SensorHandler.cpp
provider_client/launch/: provider_client.launch
provider_client/src/: client.cpp  const_global.hpp  messages.cpp  messages.hpp  temperature.cpp  temperature.h
provider_client/src/Consumer/: ConsumedService.cpp  ConsumedService.h  SensorHandler.cpp  SensorHandler.h  arrowhead_data_ext.hpp  data.cpp
provider_client/src/Interface/: Http_Handler.cpp  Http_Handler.hpp  OrchestratorInterface.cpp  OrchestratorInterface.hpp
provider_client/srv/: clientExample.srv
ros_publisher/: CMakeLists.txt  README.md  documentation.md  package.xml
ros_publisher/PublisherExample/: ApplicationServiceInterface.ini  SubscriberExample
ros_publisher/PublisherExample/src/Interface/: ApplicationServiceInterface.cpp  ApplicationServiceInterface.hpp
ros_publisher/PublisherExample/src/Provider/: ProviderExample.cpp
ros_publisher/SubscriberExample/: Makefile  run.sh
ros_publisher/SubscriberExample/src/Interface/: Http_Handler.cpp  Http_Handler.hpp
ros_publisher/SubscriberExample/src/Provider/: ProvidedService.h  SensorHandler.cpp
ros_publisher/SubscriberExample/src/Security/: RSASecurity.cpp
ros_publisher/launch/: ros_publisher.launch
ros_publisher/src/: publisher.cpp
ros_publisher/src/Consumer/: SensorHandler.cpp  SensorHandler.h
ros_publisher/src/Interface/: Https_Handler.cpp  Https_Handler.hpp  OrchestratorInterface.cpp  OrchestratorInterface.hpp
ros_publisher/test/: htest.cpp
ros_subscriber/: CMakeLists.txt  README.md  documentation.md  package.xml
ros_subscriber/PublisherExample/: Makefile  OrchestratorInterface.ini  PublisherExample  publishServices.json
ros_subscriber/PublisherExample/src/Consumer/: ConsumedService.h  ConsumerExample.cpp  SensorHandler.cpp  SensorHandler.h
ros_subscriber/PublisherExample/src/Security/: RSASecurity.cpp
ros_subscriber/keys/: autho_cacert.pem  autho_clcert.pem  autho_privkey.pem
ros_subscriber/launch/: ros_subscriber.launch
ros_subscriber/src/: messages.cpp  messages.hpp  ros_subscriber.cpp
ros_subscriber/src/Interface/: ApplicationServiceInterface.cpp  ApplicationServiceInterface.hpp  Http_Handler.cpp  Http_Handler.hpp
ros_subscriber/src/Provider/: SensorHandler.cpp  SensorHandler.h
service_consumer/: CMakeLists.txt  README.md  documentation.md  package.xml
service_consumer/ConsumerExample/: ConsumerExample  OrchestratorInterface.ini  consumedServices.json
service_consumer/ConsumerExample/src/Consumer/: SensorHandler.cpp
service_consumer/ConsumerExample/src/Interface/: Https_Handler.hpp
service_consumer/launch/: service_consumer.launch
service_consumer/src/: global_const.hpp  messages.cpp  messages.hpp  service.cpp
service_consumer/src/Interface/: ApplicationServiceInterface.cpp  ApplicationServiceInterface.hpp  Http_Handler.cpp  Http_Handler.hpp  Https_Handler.hpp
service_consumer/src/Provider/: ProvidedService.cpp  ProvidedService.h  SensorHandler.cpp  SensorHandler.h
service_consumer/src/Security/: RSASecurity.cpp
subscriber/: CMakeLists.txt  package.xml
subscriber/launch/: subscriber.launch
subscriber/src/: subscriber.cpp
